main/default/objects/Coverage_Matrix__c/Coverage_Matrix__c.object-meta.xml
<CustomObject>
    <label>Coverage Matrix</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Coverage Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>