main/default/objects/Coverage_Matrix__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Coverage Matrices</relationshipLabel>
    <relationshipName>Coverage_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>