main/default/objects/Coverage_Matrix__c/fields/Coverage_Product__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Product__c</fullName>
    <label>Coverage Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>Celerity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>