main/default/objects/Coverage_Matrix__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Format: CoverageCode_UniqueNumber</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>